--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "nodemon": "14.x"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
