--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT = 5001
 MONGO_URL = mongodb+srv://peerfectadmin:dlQ3TwwcKtNNhAgl@peerfectcluster.yiabxos.mongodb.net/peerfectdatabase
 SECRET = peerfect2024
+EMAIL_USERNAME = peerfect2@gmail.com
+EMAIL_PASSWORD = zswi oslt wciu obxa
