--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.0.4",
+    "nanoid": "^5.0.7",
     "nodemailer": "^6.9.13",
     "socket.io": "^4.6.1"
   },
